# pressuretrace

./: .gitignore  Makefile  README.md  pyproject.toml
archive/: README.md
paper/: pressuretrace_v1_spec.md
pressuretrace-results-v2/: reasoning_pilot_v2_test_all_default_qwen-qwen3-14b.jsonl
scripts/: bootstrap.sh  debug_coding_family.sh  debug_coding_route_patching.sh  install_uv.sh  layer_sweeper.sh  plot_reasoning_probe_results.sh  run_coding_family_pipeline.sh  run_coding_patching_pipeline.sh  run_coding_pilot.sh  run_coding_probe_pipeline.sh  run_coding_route_patching.sh  run_cross_model_probe_transfer.sh  run_factual_logical_pipeline.sh  run_reasoning_5090_sweep.sh  run_reasoning_frontier_sweep.sh  run_reasoning_frontier_sweep_v2.sh  run_reasoning_paper_slice_v2.sh  run_reasoning_pilot.sh  run_reasoning_probe_pipeline.sh  run_reasoning_replication_pipeline.sh  run_reasoning_route_patching.sh  run_reasoning_thinking_ablation_v2.sh
tests/: test_build_coding_control_robust_slice.py  test_build_coding_patch_pairs.py  test_build_coding_probe_dataset.py  test_build_control_robust_slice.py  test_build_reasoning_patch_pairs.py  test_build_reasoning_probe_dataset.py  test_coding_eval.py  test_coding_eval_debug.py  test_coding_probe_reports.py  test_coding_route_patching_metrics.py  test_coding_tasks_v1.py  test_debug_coding_route_patching.py  test_debug_coding_tasks.py  test_export_reasoning_probe_table.py  test_extract_hidden_states_coding.py  test_extract_hidden_states_reasoning.py  test_materialize_coding_paper_slice.py  test_materialize_reasoning_slice.py  (+23 more)
(+180 files in other folders)
