[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pressuretrace"
version = "0.1.0"
description = "Research scaffold for studying pressure-induced shifts toward shortcut-seeking behavior."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.0.0",
    "datasets>=2.20.0",
    "transformers>=4.51.0",
    "torch>=2.4.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "tqdm>=4.66.0",
    "pydantic>=2.8.0",
    "typer>=0.12.3",
    "rich>=13.7.1",
    "jinja2>=3.1.4",
    "orjson>=3.10.7",
]

[project.scripts]
pressuretrace = "pressuretrace.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "mypy>=1.11.1",
    "ruff>=0.6.2",
    "pre-commit>=3.8.0",
    "ipykernel>=6.29.5",
]

[tool.uv]
package = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["datasets"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
